# predict-test

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  workthought
backend/: .env.example  README.md  package-lock.json  package.json  pnpm-lock.yaml  test-decode.ts  test-hash.ts  test-usdc.ts
backend/prisma/: manual_schema_update.sql  schema.prisma
backend/src/: server.ts
backend/src/application/: dtos.ts  ports.ts
backend/src/application/use-cases/: AuthUseCase.ts  CategoryUseCase.ts  MarketUseCase.ts  OracleUseCase.ts  TradeUseCase.ts
backend/src/domain/: exceptions.ts
backend/src/infrastructure/repositories/: PrismaRepositories.ts
backend/src/presentation/: routes.ts
backend/src/workers/: OracleWorker.ts
contracts/: MARKET_TOKEN_CONTRACT_COMPATIBILITY_GUIDE.md
contracts/prediction_market/: Cargo.toml  DEPLOYMENT_GUIDE.md  INTEGRATION_GUIDE.md  README.md  test_bump.rs
contracts/prediction_market/src/: contract.rs  error.rs  lib.rs  storage.rs  test.rs  types.rs
docs/: TOKEN_CONTRACT_DEPLOY_GUIDE.md
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  workthought.md
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Navbar.tsx  Providers.tsx
frontend/src/hooks/: useAuth.ts  useCategories.ts  useContractStats.ts  useExecuteTrade.ts  useKYC.ts  useMarkets.ts  useTransactions.ts  useUsers.ts
frontend/src/lib/: marketDisplay.ts  toast.ts
frontend/src/services/: apiClient.ts  stellarService.ts
frontend/src/store/: useAuthStore.ts  useUiStore.ts
frontend/src/types/: index.ts
(+33 files in other folders)
